--- a/public/index.html
+++ b/public/index.html
@@ -2,6 +2,8 @@
 <head>
 <meta charset='utf-8'/>
 <title>app</title>
+<link rel='stylesheet' href='main.css'/>
+<script src='vendor.js'></script>
 <script src='main.js'></script>
 </head>
 
